# lol_app

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: checks.yml
lol_app/: settings.py
lol_app/bot/: main.py
